# nba-chatbot

./: .gitattributes  .gitignore  README.md  pyproject.toml
app/: chatbot_app.py  chatbot_prompts.py  chatbot_utils.py
data/database/: nba-db-regseason.db
data/meta/: column_definitions.yaml  table_dictionary.yaml
src/build_db/: build_database.py  process_raw.py
src/query_llm/: build_dictionary.py  llm_prompts.py
