[project]
name = "nba-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb-engine>=0.15.0",
    "duckdb>=1.1.3",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.37",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
